# game-of-life

./: .gitignore  README.md  documentation
.github/workflows/: testing.yml
GameOfLife/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  play
GameOfLife/console/: CMakeLists.txt  Makefile  board.h  cmake_install.cmake
GameOfLife/game/: Makefile  cmake_install.cmake
SDL2_Impl/GameOfLife/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CUnitTests.c  Makefile  cmake_install.cmake  gameSDL  main.c  play  tests
SDL2_Impl/GameOfLife/clipped/: CMakeLists.txt  Makefile  board_clipped.c  board_clipped.h  cmake_install.cmake
SDL2_Impl/GameOfLife/game/: Makefile  cmake_install.cmake
SDL2_Impl/GameOfLife/versions/: CMakeLists.txt  board.c  board.h
Step1/: Makefile  all  board.c
ansi/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  play
ansi/console/: CMakeLists.txt  Makefile  board.c  board.h  cmake_install.cmake
ansi/game/: CMakeLists.txt  Makefile  cmake_install.cmake  life.c  life.h
step1/: Makefile  board.c  main.c
