cmake_minimum_required(VERSION 3.0)
project(gameSDL LANGUAGES C)
add_executable(${PROJECT_NAME} "")
target_sources(${PROJECT_NAME} PRIVATE main.c)
target_link_libraries(${PROJECT_NAME} PRIVATE clipped game)
add_subdirectory(clipped)
add_subdirectory(game)

add_executable(tests "")
target_sources(tests PRIVATE CUnitTests.c)
target_link_libraries(tests PRIVATE clipped cunit)
enable_testing()
add_test(NAME "CUnit_Tests" COMMAND tests)